<resources>
    <string name="app_name">IEPSC</string>
    <string name="action_settings">Settings</string>


    <string name="login">登 陆</string>

    <string name="phone">手机号码/登录名</string>
    <string name="passwd">密码</string>
    <string name="old_passwd">旧密码</string>
    <string name="new_passwd">新密码</string>
    <string name="sure">确 定</string>
    <string name="code">验证码</string>
    <string name="forget_passwd">忘记密码?</string>
    <string name="setting_passwd">设置密码</string>


    <string name="main">主页</string>
    <string name="my">我的</string>


    <string name="booking_decalaraion">预约申报</string>
    <string name="search">查    询</string>
    <string name="commit_online">在线提交</string>
    <string name="choose_people">选人</string>
    <string name="task_send">任务派发</string>
    <string name="task_check">选择任务</string>
    <string name="done">完成</string>
    <string name="send">发送</string>
    <string name="task_my">在线考评</string>
    <string name="about">关于</string>
    <string name="detail">详情</string>
    <string name="amount">桶数</string>
    <string name="sales">营业额(元)</string>
    <string name="small">小桶（桶数）</string>
    <string name="mid">中捅（桶数）</string>
    <string name="big">大桶（桶数）</string>
    <string name="add">添加</string>
    <string name="title_activity_commit_application">CommitApplicationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
