<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.LoginActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_72"
        >
    <cn.cornflower.com.huan.view.ClearEditText
        android:id="@+id/et_name"
        android:inputType="number"
        android:hint="@string/phone"
        android:maxLength="15"
        android:textSize="@dimen/size_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        android:drawableRight="@drawable/abc_ic_clear_mtrl_alpha"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_72"
        >
    <cn.cornflower.com.huan.view.ClearEditText
        android:textSize="@dimen/size_16"
        android:id="@+id/et_passwd"
        android:inputType="textPassword"
        android:maxLength="15"
        android:hint="@string/passwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        android:drawableRight="@drawable/abc_ic_clear_mtrl_alpha"/>

</android.support.design.widget.TextInputLayout>
<!--<RelativeLayout-->
    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<android.support.v7.widget.AppCompatCheckBox-->
        <!--android:id="@+id/cb"-->
        <!--style="@style/marginhorizontal"-->
        <!--android:clickable="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:text="@string/rememberPasswd"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
<!--</RelativeLayout>-->

    <android.support.v7.widget.AppCompatButton
        android:gravity="center"
        android:background="@color/green"
        android:textSize="@dimen/size_16"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:id="@+id/btn_login"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56" />

</LinearLayout>
